--- a/index.html
+++ b/index.html
@@ -4,4 +4,32 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AluraBooks</title>
+  <title>TechConf</title>
+
+  <body>
+ <h1>TechConf</h1>
+
+
+
+
+
+  </body>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  </head>
