--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <title>TechConf</title>
 
   <body>
- <h1>TechConf</h1>
+ <h1>TechConf 2025</h1>
+ <h2> A maior conferência de tecnologia do Brasil</h2>
 
 
 
