--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <body>
  <h1>TechConf 2025</h1>
- <h2> A maior conferência de tecnologia do Brasil</h2>
+ <p1> A maior conferência de tecnologia do Brasil</p1>
 
 
 
