--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
 
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="styles.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TechConf</title>
 
   <body>
  <h1>TechConf 2025</h1>
- <p1> A maior conferência de tecnologia do Brasil</p1>
+ <p1> <strong> A maior conferência de tecnologia do Brasil</p1> </stong>
 
 
 
