--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <body>
  <h1>TechConf 2025</h1>
- <p1> <strong> A maior conferência de tecnologia do Brasil</p1> </stong>
+ <p1><em> <strong> A maior conferência de tecnologia do Brasil </stong> </em></p1> 
 
 
 
