--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
  <h1>TechConf 2025</h1>
  <p1><em> <strong> A maior conferência de tecnologia do Brasil </stong> </em></p1> 
-
+<p1><del>data</del></p1>
 
 
 
